syntax = "proto3";

package pb;

//to remove the red line of this import we need to define the proto_path as documentation on vscode-proto3 extension
/*
    we add to our vscode settings.json the following lines: (we can add more --proto_path folders)
     "protoc": {
        "options": [
            "--proto_path=proto/protodefs"
        ]
    },
*/
import "google/api/annotations.proto";

import "user.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/diegoclair/master-class-backend/proto/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Simple Bank API";
		version: "1.0";
		contact: {
			name: "Diego Clair";
			url: "https://github.com/diegoclair";
			email: "diego93rodrigues@gmail.com";
		};
	};
};

message CreateUserRequest {
    string username = 1;
    string full_name =2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
    string session_id = 2;
    string access_token = 3;
    google.protobuf.Timestamp access_token_expires_at = 4;
    string refresh_token = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}


service SimpleBank {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this endpoint to create a new user"
            summary: "Create new user"
        };
    }
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse){
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this endpoint to login user and get access token & refresh token"
            summary: "Login user"
        };
    }
}